# narrative

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.claude/commands/: understand.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  pbi.yml
app/core/: Cargo.toml  README.md
app/core/src/: backlog.rs  cg_metadata.rs  condition.rs  error.rs  lib.rs  read_history.rs  unlocks.rs  variable.rs
app/core/src/asset/: background.rs  bgm.rs  mod.rs  se.rs  ui_theme.rs
app/core/src/character/: expression.rs  mod.rs  position.rs  registry.rs  types.rs
app/core/src/character/animation/: easing.rs  escape.rs  faint.rs  keyframe.rs  mod.rs  types.rs
app/core/src/config/: audio.rs  game.rs  graphics.rs  mod.rs  paths.rs  skip.rs  text.rs  ui.rs  user_settings.rs
app/core/src/scenario/: choice.rs  dialogue.rs  mod.rs  types.rs
app/core/src/types/: color.rs  ids.rs  mod.rs  rect.rs  transition.rs
app/editor/: Cargo.toml
app/editor/src/: main.rs
app/engine/: Cargo.toml  README.md
app/engine/examples/: README.md  audio_test.rs  se_test.rs  text_rendering.rs  wgpu_clear_color.rs
app/engine/src/: error.rs  lib.rs
app/engine/src/app/: config.rs  game_loop.rs  mod.rs
app/engine/src/asset/: README.md  cache.rs  handle.rs  hot_reload.rs  loader.rs  mod.rs  registry.rs
app/engine/src/audio/: bgm.rs  manager.rs  mod.rs  se.rs  voice.rs
app/engine/src/input/: handler.rs  key.rs  mod.rs  mouse.rs
app/engine/src/render/: batch.rs  commands.rs  mod.rs  pipeline.rs  renderer.rs  sprite.rs  transition.rs
app/engine/src/render/shaders/: sprite.wgsl  transition_dissolve.wgsl  transition_fade.wgsl
app/engine/src/runtime/: executor.rs  flag_store.rs  mod.rs  state_machine.rs  variable_store.rs
app/engine/src/runtime/executor/: command_execution.rs  display_state.rs  execution_support.rs  flow_control.rs  lifecycle.rs  persistence.rs  state.rs
app/engine/src/runtime/executor/tests/: call_return_tests.rs  choice_tests.rs  command_execution_tests.rs  conditional_tests.rs  display_state_tests.rs  flow_control_tests.rs  lifecycle_tests.rs  mod.rs  persistence_tests.rs  variable_tests.rs
app/engine/src/save/: data.rs  manager.rs  mod.rs  slot_info.rs  thumbnail.rs
app/engine/src/text/: atlas.rs  font_manager.rs  glyph_cache.rs  layout.rs  mod.rs  typewriter.rs
app/engine/src/ui/: mod.rs
app/engine/tests/: text_integration.rs
app/game/: Cargo.toml  README.md
app/game/examples/: README.md  animation.rs  chapter_01_transitions.rs  character_movement.rs  complex_animations.rs  conditions.rs  transitions.rs
app/game/src/: lib.rs  main.rs
app/game/src/components/: backlog.rs  cg_gallery.rs  cg_viewer.rs  character_animation.rs  character_sprite.rs  character_transition.rs  choice_menu.rs  confirm_dialog.rs  dialogue_box.rs  mod.rs  pause_menu.rs  quick_menu.rs  save_load_menu.rs  save_slot_card.rs  settings_menu.rs  title_screen.rs
app/game/src/components/game_root/: audio.rs  children.rs  element.rs  element_tests.rs  in_game.rs  input.rs  input_tests.rs  mod.rs  rendering.rs  state.rs  textures.rs  transitions.rs
app/game/tests/: README.md  animation.rs  cg.rs
app/gui/: Cargo.toml  README.md
app/gui/src/: lib.rs  theme.rs
app/gui/src/components/: mod.rs
app/gui/src/components/common/: button.rs  card.rs  dropdown.rs  icon.rs  mod.rs  sidebar.rs  slider.rs  toggle.rs
app/gui/src/framework/: app.rs  async_layout.rs  dev_assets.rs  dirty.rs  element.rs  error.rs  input.rs  layout.rs  menu.rs  metrics.rs  mod.rs  reactive.rs  render_graph.rs  window.rs
app/gui/src/framework/animation/: context.rs  core.rs  easing.rs  mod.rs  property.rs
app/gui/src/framework/renderer/: batch.rs  mod.rs  quad.rs  text.rs  texture.rs
app/gui/src/framework/renderer/shaders/: quad.wgsl  text.wgsl  texture.wgsl  video.wgsl
app/tools/: Cargo.toml  QUICKSTART.md  README.md  USAGE.md  validate_scenarios.sh
app/tools/examples/: validate_from_code.rs
app/tools/src/: lib.rs  scenario_validator.rs
