[workspace]
members = [
    "app/core",
    "app/engine",
    "app/gui",
    "app/game",
    "app/editor",
    "app/tools",
]
default-members = ["app/game"]
resolver = "2"

# Centralized dependency management
[workspace.dependencies]
# Serialization and configuration
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.8"
ron = "0.12.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Async runtime (minimal features for asset loading)
tokio = { version = "1.48.0", features = ["rt", "fs"] }

# Image processing
image = "0.25.9"

# Graphics (for narrative-engine)
wgpu = "28.0.0"
winit = "0.30.12"
pollster = "0.4.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = "0.30.9"

# Text rendering (for narrative-engine)
cosmic-text = "0.15.0"
swash = "0.2.6"

# Audio (for narrative-engine)
kira = "0.11.0"

# Cache (for narrative-engine)
lru = "0.16.2"

# Layout engine (for narrative-gui)
taffy = "0.9.2"

# File dialogs (for narrative-gui)
rfd = "0.16.0"

# Menu bar (for narrative-gui)
muda = "0.17.1"

# Utilities (for narrative-gui)
parking_lot = "0.12.5"
scopeguard = "1.2.0"
raw-window-handle = "0.6.2"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Date/time
chrono = "0.4.42"

# File watching (for hot-reload)
notify = "8.2.0"
crossbeam-channel = "0.5.15"

# UUID
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# Testing utilities
tempfile = "3.24.0"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
repository = "https://github.com/itsakeyfut/narrative"
authors = ["itsakeyfut"]
license = "MIT"