[package]
name = "narrative-engine"
version = "0.1.0"
description = "Core engine for Narrative Novel"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
narrative-core = { path = "../core" }

# GPU rendering
wgpu.workspace = true
bytemuck.workspace = true

# Window management
winit.workspace = true
pollster.workspace = true

# Text rendering
cosmic-text.workspace = true
swash.workspace = true

# Audio
kira.workspace = true

# Math
glam.workspace = true

# Image processing
image.workspace = true

# Serialization
serde.workspace = true
toml.workspace = true
ron.workspace = true

# Date/time
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt", "fs"] }

# Cache
lru.workspace = true

# Logging
tracing.workspace = true

# Hot-reload (optional)
notify = { workspace = true, optional = true }
crossbeam-channel = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
once_cell = "1.21.3"

[features]
default = []
debug = ["debug-overlay"]
debug-overlay = []
debug-tools = []
hot-reload = ["dep:notify", "dep:crossbeam-channel"]
